--- a/less/general.less
+++ b/less/general.less
@@ -1,5 +1,7 @@
 @import "variables.less";
 body{
-  min-width: 320px;
+  width: 320px;
+  margin: 0 auto;
+  background-color: #b4b472;
   font-family: @font-family;
 }
