--- a/less/style.less
+++ b/less/style.less
@@ -3,3 +3,11 @@
 @import "variables.less";
 @import "general.less";
 @import "components/top-menu.less";
+@import "components/main-menu.less";
+@import "components/intro.less";
+@import "components/applications.less";
+@import "components/info.less";
+
+@import "components/shop.less";
+@import "components/contacts.less";
+
