--- a/less/variables.less
+++ b/less/variables.less
@@ -2,3 +2,7 @@
 @sm-screen: 320px;
 @menu-color: #1d2631;
 
+@contacts-item-color: #d22856;
+@rates-head-color: #283645;
+@rates-border-color: #e5e5e5;
+
