--- a/less/components/contacts.less
+++ b/less/components/contacts.less
@@ -10,7 +10,7 @@
     font-weight: lighter;
     padding: 0 45px;
     text-align: center;
-    margin-bottm: 45px;
+    margin-bottom: 45px;
   }
   &__item-header{
     font-family: @font-family;
