--- a/less/components/shop.less
+++ b/less/components/shop.less
@@ -1,8 +1,11 @@
 @import "../variables.less";
 .shop{
+  width: 320px;
   .rates{
-    tr{
-      width:auto;
+    position: relative;
+    z-index: -100;
+    td{
+      width: 276px;
     }
     &__item{
       background-color: @rates-head-color;
