--- a/less/variables.less
+++ b/less/variables.less
@@ -1,8 +1,10 @@
 @font-family: 'Open Sans', 'Arial', sans-serif;
 @sm-screen: 320px;
 @menu-color: #1d2631;
-
 @contacts-item-color: #d22856;
+@frm-label-color: @contacts-item-color;
 @rates-head-color: #283645;
 @rates-border-color: #e5e5e5;
+@input-border-color: @rates-border-color;
+@light-gray-back-color: f2f2f2;
 
