--- a/less/components/top-menu.less
+++ b/less/components/top-menu.less
@@ -11,7 +11,15 @@
   //position: relative;
   z-index: 100;
   &__logo{
-
+  }
+  &__text{
+    font-family: @font-family;
+    color: white;
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: lighter;
+    padding: 36px 48px 58px;
+    text-align: center;
   }
 }
 
