--- a/less/general.less
+++ b/less/general.less
@@ -1,7 +1,19 @@
 @import "variables.less";
+html
+{ box-sizing: border-box; }
+*, *:before, *:after
+{ box-sizing: inherit; }
 body{
   width: 320px;
   margin: 0 auto;
   background-color: #b4b472;
   font-family: @font-family;
+}
+h1, h2, p{
+  margin: 0;
+}
+fieldset{
+  border: none;
+  padding: 0;
+  margin:0;
 }
