--- a/less/style.less
+++ b/less/style.less
@@ -1,6 +1,7 @@
 @import (less) "../css/normalize.css";
 
 @import "variables.less";
+@import "mixins.less";
 @import "general.less";
 @import "components/top-menu.less";
 @import "components/main-menu.less";
