--- a/less/components/frm-contest.less
+++ b/less/components/frm-contest.less
@@ -1,11 +1,8 @@
-@import "../variables.less";
 .frm-contest{
-  //padding: 45px 20px;
   background-color: white;
     &__text {
       background-color: white;
       padding: 45px 20px 0;
-      font-family: @font-family;
       color: black;
       font-size: 14px;
       line-height: 30px;
@@ -20,9 +17,7 @@
       display: flex;
       flex-direction: column;
       padding: 0 20px;
-
-      label, legend {
-        font-family: @font-family;
+      label, h2{
         color: @frm-label-color;
         font-size: 14px;
         line-height: 18px;
@@ -32,9 +27,10 @@
         padding-left: 23px;
         margin-bottom: 13px;
       }
-      legend {
+      h2 {
         padding: 0;
         text-align: center;
+        margin-top:0;
       }
       input[type="text"] {
         border: 2px solid @input-border-color;
@@ -49,47 +45,54 @@
         width: 100%;
         margin-bottom: 25px;
       }
+      input[type="radio"]{
+        display:none;
+
+      }
       input:last-of-type {
         margin-bottom: 40px;
       }
-      input::-webkit-input-placeholder {
+      input::placeholder {
         font-family: @font-family;
         color: black;
         font-size: 18px;
         line-height: 30px;
         font-weight: normal;
       }
-      input:-moz-placeholder {
-        font-family: @font-family;
-        color: black;
-        font-size: 18px;
-        line-height: 30px;
-        font-weight: normal;
-      }
-
       &--player {
         background-color: white;
       }
       &--travel-app {
-        //background-color: @light-gray-back-color;
         background-color: green;
-        padding-top: 107px;
-        legend {
-          position: relative;
-          top: 40px;
+        padding-top: 36px;
+        h2 {
+          margin-bottom: 40px;
         }
         label {
           color: black;
           text-transform: none;
           font-size: 18px;
           line-height: 30px;
+          padding-left: 60px;
+          position: relative;
+        }
+        label:before{
+          content: "";
+          position: absolute;
+          left:0;
+          width: 39px;
+          height: 39px;
+          background: @frm-label-color;
+          border: 10px solid white;
+          border-radius: 50%;
+          box-shadow: 0 0 0 2px blue;
+
         }
       }
       &--travel-period {
-        padding-top: 107px;
-        legend {
-          position: relative;
-          top: 50px;
+        padding-top: 50px;
+        h2 {
+          margin-bottom: 45px;
         }
       }
     }
