--- a/less/components/shop.less
+++ b/less/components/shop.less
@@ -1,12 +1,10 @@
-@import "../variables.less";
 .shop{
   width: 320px;
+  overflow: hidden;
+  @td-width: 276px;
   .rates{
-    position: relative;
-    z-index: -100;
-    td{
-      width: 276px;
-    }
+    width: (@td-width+2)*3;
+    transform: translateX(-((@td-width)-20));
     &__item{
       background-color: @rates-head-color;
       border: 2px solid @rates-border-color;
@@ -14,7 +12,6 @@
       width: 276px;
     }
     &__name{
-      font-family: @font-family;
       color: white;
       font-size: 18px;
       line-height: 30px;
@@ -24,7 +21,6 @@
       text-transform: uppercase;
     }
     &__price{
-      font-family: @font-family;
       color: white;
       font-size: 24px;
       line-height: 30px;
@@ -35,14 +31,17 @@
     }
     &__feature{
       border: 2px solid @rates-border-color;
-      font-family: @font-family;
       color: black;
       font-size: 14px;
       line-height: 30px;
       font-weight: normal;
-      //padding: 0 48px;
       text-align: center;
       text-transform: uppercase;
     }
+  }
+  .slider__switch{
+      .slider-switch();
+    padding-top: 40px;
+
   }
 }
