m4-t1 в форме переделал меню, блок с фотографиями

--- a/less/components/top-menu.less
+++ b/less/components/top-menu.less
@@ -1,19 +1,16 @@
 .top-menu {
-  background-color: @menu-color;
-  padding: 22px 6%;
+  width: 320px;
+  padding: 22px 20px;
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
   z-index: 100;
-  &__logo{
+  background: rgba(0, 0, 0, 0.3);
+  position: relative;
+  &__logo {
+
   }
-  &__text{
-    color: white;
-    font-size: 24px;
-    line-height: 30px;
-    font-weight: lighter;
-    padding: 36px 48px 58px;
-    text-align: center;
+  &__btn {
+
   }
 }
 
