--- a/less/style.less
+++ b/less/style.less
@@ -3,6 +3,7 @@
 @import "variables.less";
 @import "mixins.less";
 @import "general.less";
+@import "components/main-header";
 @import "components/top-menu.less";
 @import "components/main-menu.less";
 @import "components/intro.less";
@@ -12,4 +13,7 @@
 @import "components/shop.less";
 @import "components/contacts.less";
 @import "components/frm-contest.less";
+@import "components/foto-container";
+@import "components/contest-footer";
+
 
