--- a/less/variables.less
+++ b/less/variables.less
@@ -6,5 +6,6 @@
 @rates-head-color: #283645;
 @rates-border-color: #e5e5e5;
 @input-border-color: @rates-border-color;
-@light-gray-back-color: f2f2f2;
+@light-gray-back-color: #f2f2f2;
+@green-btn-color: #2aab6d;
 
