--- a/less/components/frm-contest.less
+++ b/less/components/frm-contest.less
@@ -1,38 +1,157 @@
-.frm-contest{
+.frm-contest {
+  width: 320px;
+  margin: 0 auto;
   background-color: white;
-    &__text {
-      background-color: white;
-      padding: 45px 20px 0;
-      color: black;
+  padding-top: 45px;
+  &__text {
+    background-color: white;
+    padding: 0 20px;
+    color: black;
+    font-size: 14px;
+    line-height: 30px;
+    font-weight: normal;
+    text-align: center;
+    margin-bottom: 40px;
+    span {
+      display: none;
+    }
+  }
+  &__fields-group {
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
+    label, h2 {
+      color: @frm-label-color;
       font-size: 14px;
+      line-height: 18px;
+      font-weight: normal;
+      text-transform: uppercase;
+      text-align: left;
+      padding-left: 23px;
+      margin-bottom: 13px;
+    }
+    h2 {
+      padding: 0;
+      text-align: center;
+      margin-top:0;
+    }
+    input[type="text"] {
+      border: 2px solid @input-border-color;
+      border-radius: 2px;
+      font-family: @font-family;
+      color: black;
+      font-size: 18px;
+      line-height: 30px;
+      vertical-align: middle;
+      font-weight: normal;
+      padding: 14px 22px;
+      width: 100%;
+      margin-bottom: 25px;
+    }
+    input[type="radio"] {
+      display:none;
+    }
+    input:last-of-type {
+      margin-bottom: 40px;
+    }
+    input::placeholder {
+      font-family: @font-family;
+      color: black;
+      font-size: 18px;
       line-height: 30px;
       font-weight: normal;
-      text-align: center;
-      margin-bottom: 40px;
-      span {
-        display: none;
+    }
+    &--player {
+      background-color: white;
+    }
+    &--travel-app {
+      background-color: @light-gray-back-color;
+      padding-top: 36px;
+      h2 {
+        margin-bottom: 40px;
+      }
+      label {
+        color: black;
+        text-transform: none;
+        font-size: 18px;
+        line-height: 30px;
+        padding-left: 60px;
+        margin-bottom: 46px;
+        position: relative;
+      }
+      input[type="radio"]:checked+label:before{
+        content: "";
+        position: absolute;
+        left:0;
+        width: 37px;
+        height: 37px;
+        background: @frm-label-color;
+        border: 10px solid white;
+        border-radius: 50%;
+        box-shadow: 0 0 0 2px #e5e5e5;
+      }
+      input[type="radio"]:not(checked)+label:before{
+        content: "";
+        position: absolute;
+        left:0;
+        width: 37px;
+        height: 37px;
+        background: white;
+        border: 10px solid white;
+        border-radius: 50%;
+        box-shadow: 0 0 0 2px #e5e5e5;
       }
     }
-    &__fields-group {
-      display: flex;
-      flex-direction: column;
-      padding: 0 20px;
-      label, h2{
-        color: @frm-label-color;
-        font-size: 14px;
-        line-height: 18px;
-        font-weight: normal;
-        text-transform: uppercase;
-        text-align: left;
-        padding-left: 23px;
-        margin-bottom: 13px;
-      }
+    &--travel-period {
+      padding-top: 50px;
       h2 {
-        padding: 0;
-        text-align: center;
-        margin-top:0;
+        margin-bottom: 45px;
       }
       input[type="text"] {
+        margin-bottom: 14px;
+      }
+      label {
+        text-align: center;
+        padding: 0;
+        margin-bottom: 27px;
+      }
+      label:last-of-type {
+        margin-bottom: 52px;
+      }
+    }
+    &--companions {
+      background-color: @light-gray-back-color;
+      padding-top: 24px;
+      h2 {
+        margin-bottom: 36px;
+      }
+      input[type="text"] {
+        margin-bottom: 48px;
+      }
+    }
+    &--goals {
+      padding-top: 46px;
+      h2 {
+        padding: 0 30px;
+        margin-bottom: 42px;
+      }
+      label {
+        color: black;
+        text-transform: none;
+        font-size: 18px;
+
+      }
+    }
+    &--fotos {
+      background-color: @light-gray-back-color;
+      padding-top: 36px;
+      h2 {
+        margin-bottom: 34px;
+      }
+      input[type="file"] {
+        display: none;
+      }
+      label {
         border: 2px solid @input-border-color;
         border-radius: 2px;
         font-family: @font-family;
@@ -40,60 +159,41 @@
         font-size: 18px;
         line-height: 30px;
         vertical-align: middle;
-        font-weight: normal;
-        padding: 14px 22px;
+        font-weight: bold;
+        text-align: center;
+        padding: 16px 0;
         width: 100%;
-        margin-bottom: 25px;
-      }
-      input[type="radio"]{
-        display:none;
-
-      }
-      input:last-of-type {
-        margin-bottom: 40px;
-      }
-      input::placeholder {
-        font-family: @font-family;
-        color: black;
-        font-size: 18px;
-        line-height: 30px;
-        font-weight: normal;
-      }
-      &--player {
+        margin-bottom: 33px;
         background-color: white;
       }
-      &--travel-app {
-        background-color: green;
-        padding-top: 36px;
-        h2 {
-          margin-bottom: 40px;
-        }
-        label {
-          color: black;
-          text-transform: none;
-          font-size: 18px;
-          line-height: 30px;
-          padding-left: 60px;
-          position: relative;
-        }
-        label:before{
-          content: "";
-          position: absolute;
-          left:0;
-          width: 39px;
-          height: 39px;
-          background: @frm-label-color;
-          border: 10px solid white;
-          border-radius: 50%;
-          box-shadow: 0 0 0 2px blue;
-
-        }
-      }
-      &--travel-period {
-        padding-top: 50px;
-        h2 {
-          margin-bottom: 45px;
-        }
-      }
     }
+  }
+  &__btn-submit {
+    outline: none;
+    background-color: @green-btn-color;
+    border: 2px solid @green-btn-color;
+    border-radius: 2px;
+    color: white;
+    font-size: 18px;
+    line-height: 30px;
+    font-weight: bold;
+    text-align: center;
+    vertical-align: middle;
+    padding: 16px;
+    text-transform: uppercase;
+    width: 100%;
+    margin-bottom: 28px;
+  }
+  &__required-desc {
+    font-size: 14px;
+    line-height: 30px;
+    color: black;
+    text-transform: uppercase;
+    text-decoration: underline;
+    text-align: center;
+    &:first-letter{
+      color: @frm-label-color;
+    }
+  }
+
 }
