--- a/less/components/main-menu.less
+++ b/less/components/main-menu.less
@@ -1,24 +1,20 @@
 .main-menu{
-  //display:none;
+  display:none;
   position: absolute;
-  z-index: 80;
-  top: -325px;
-  //top: 100px;
+  z-index: 200;
+  top: 0;
   left: 0;
-  width: 100%;
+  width: 320px;
   background-color: @menu-color;
   ul{
     padding: 0;
     margin: 0;
     list-style: none;
-    font-size: 0;
     display:flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
   }
   li{
-    width:100%;
     padding:24px 0;
   }
   a{
@@ -30,7 +26,5 @@
     font-weight: bold;
     text-transform: uppercase;
     text-decoration:none;
-    width:100%;
-
   }
 }
