--- a/less/components/frm-contest.less
+++ b/less/components/frm-contest.less
@@ -16,25 +16,26 @@
       display: none;
     }
   }
-  &__fields-group {
+  fieldset {
     display: flex;
     flex-direction: column;
     padding: 0 20px;
-    label, h2 {
-      color: @frm-label-color;
-      font-size: 14px;
-      line-height: 18px;
-      font-weight: normal;
-      text-transform: uppercase;
-      text-align: left;
-      padding-left: 23px;
-      margin-bottom: 13px;
-    }
-    h2 {
-      padding: 0;
-      text-align: center;
-      margin-top:0;
-    }
+  }
+  label, h2 {
+    color: @frm-label-color;
+    font-size: 14px;
+    line-height: 18px;
+    font-weight: normal;
+    text-transform: uppercase;
+    text-align: left;
+    padding-left: 23px;
+    margin-bottom: 13px;
+  }
+  h2 {
+    padding: 0;
+    text-align: center;
+    margin-top: 0;
+  }
     input[type="text"] {
       border: 2px solid @input-border-color;
       border-radius: 2px;
@@ -49,11 +50,11 @@
       margin-bottom: 25px;
     }
     input[type="radio"] {
-      display:none;
+      display: none;
     }
-    input:last-of-type {
-      margin-bottom: 40px;
-    }
+    //input:last-of-type {
+    //  margin-bottom: 40px;
+    //}
     input::placeholder {
       font-family: @font-family;
       color: black;
@@ -61,113 +62,155 @@
       line-height: 30px;
       font-weight: normal;
     }
-    &--player {
-      background-color: white;
-    }
-    &--travel-app {
-      background-color: @light-gray-back-color;
-      padding-top: 36px;
-      h2 {
-        margin-bottom: 40px;
-      }
-      label {
-        color: black;
-        text-transform: none;
-        font-size: 18px;
-        line-height: 30px;
-        padding-left: 60px;
-        margin-bottom: 46px;
-        position: relative;
-      }
-      input[type="radio"]:checked+label:before{
-        content: "";
-        position: absolute;
-        left:0;
-        width: 37px;
-        height: 37px;
-        background: @frm-label-color;
-        border: 10px solid white;
-        border-radius: 50%;
-        box-shadow: 0 0 0 2px #e5e5e5;
-      }
-      input[type="radio"]:not(checked)+label:before{
-        content: "";
-        position: absolute;
-        left:0;
-        width: 37px;
-        height: 37px;
-        background: white;
-        border: 10px solid white;
-        border-radius: 50%;
-        box-shadow: 0 0 0 2px #e5e5e5;
-      }
-    }
-    &--travel-period {
-      padding-top: 50px;
-      h2 {
-        margin-bottom: 45px;
-      }
-      input[type="text"] {
-        margin-bottom: 14px;
-      }
-      label {
-        text-align: center;
-        padding: 0;
-        margin-bottom: 27px;
-      }
-      label:last-of-type {
-        margin-bottom: 52px;
-      }
-    }
-    &--companions {
-      background-color: @light-gray-back-color;
-      padding-top: 24px;
-      h2 {
-        margin-bottom: 36px;
-      }
-      input[type="text"] {
-        margin-bottom: 48px;
-      }
-    }
-    &--goals {
-      padding-top: 46px;
-      h2 {
-        padding: 0 30px;
-        margin-bottom: 42px;
-      }
-      label {
-        color: black;
-        text-transform: none;
-        font-size: 18px;
+  &__player {
+    background-color: white;
+  }
 
-      }
+  &__travel-app {
+    background-color: @light-gray-back-color;
+    padding-top: 36px;
+    h2 {
+      margin-bottom: 40px;
     }
-    &--fotos {
-      background-color: @light-gray-back-color;
-      padding-top: 36px;
-      h2 {
-        margin-bottom: 34px;
-      }
-      input[type="file"] {
-        display: none;
-      }
-      label {
-        border: 2px solid @input-border-color;
-        border-radius: 2px;
-        font-family: @font-family;
-        color: black;
-        font-size: 18px;
-        line-height: 30px;
-        vertical-align: middle;
-        font-weight: bold;
-        text-align: center;
-        padding: 16px 0;
-        width: 100%;
-        margin-bottom: 33px;
-        background-color: white;
-      }
+    label {
+      color: black;
+      text-transform: none;
+      font-size: 18px;
+      line-height: 30px;
+      padding-left: 60px;
+      margin-bottom: 46px;
+      position: relative;
+    }
+    input[type="radio"]:checked + label:before {
+      content: "";
+      position: absolute;
+      left: 0;
+      width: 37px;
+      height: 37px;
+      background: @frm-label-color;
+      border: 10px solid white;
+      border-radius: 50%;
+      box-shadow: 0 0 0 2px #e5e5e5;
+    }
+    input[type="radio"]:not(checked) + label:before {
+      content: "";
+      position: absolute;
+      left: 0;
+      width: 37px;
+      height: 37px;
+      background: white;
+      border: 10px solid white;
+      border-radius: 50%;
+      box-shadow: 0 0 0 2px #e5e5e5;
     }
   }
+
+  &__travel-period {
+    padding-top: 50px;
+    h2 {
+      margin-bottom: 45px;
+    }
+    input[type="text"] {
+      margin-bottom: 14px;
+    }
+    label {
+      text-align: center;
+      padding: 0;
+      margin-bottom: 27px;
+    }
+    label:last-of-type {
+      margin-bottom: 52px;
+    }
+  }
+
+  &__companions {
+    background-color: @light-gray-back-color;
+    padding-top: 24px;
+    h2 {
+      margin-bottom: 36px;
+    }
+    input[type="text"] {
+      margin-bottom: 48px;
+    }
+    .companion-wrapper {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      padding-top: 23px;
+      &-col * {
+        display: flex;
+        flex-direction: column;
+      }
+      &-col-1 {
+        width: 61px;
+        label {
+          width: 61px;
+          text-align: center;
+          margin-bottom: 15px;
+        }
+        input {
+          border-right: none;
+          margin-bottom: 22px;
+        }
+      }
+      &-col-2, &-col-3 {
+        width: 219px;
+      }
+      &-col-2 {
+        input {
+          margin-bottom: 22px;
+        }
+
+      }
+      &-col-3 {
+        margin-left: 61px;
+      }
+    }
+    .companion-wrapper:first-of-type {
+      border-top: 2px solid @input-border-color;
+    }
+  }
+
+  &__goals {
+    padding-top: 46px;
+    h2 {
+      padding: 0 30px;
+      margin-bottom: 42px;
+    }
+    label {
+      color: black;
+      text-transform: none;
+      font-size: 18px;
+
+    }
+  }
+
+  &__fotos {
+    background-color: @light-gray-back-color;
+    padding-top: 36px;
+    h2 {
+      margin-bottom: 34px;
+    }
+    input[type="file"] {
+      display: none;
+    }
+    label {
+      border: 2px solid @input-border-color;
+      border-radius: 2px;
+      font-family: @font-family;
+      color: black;
+      font-size: 18px;
+      line-height: 30px;
+      vertical-align: middle;
+      font-weight: bold;
+      text-align: center;
+      padding: 16px 0;
+      width: 100%;
+      margin-bottom: 33px;
+      background-color: white;
+    }
+  }
+
   &__btn-submit {
     outline: none;
     background-color: @green-btn-color;
@@ -191,9 +234,9 @@
     text-transform: uppercase;
     text-decoration: underline;
     text-align: center;
-    &:first-letter{
+    &:first-letter {
       color: @frm-label-color;
     }
   }
-
 }
+
