вынес slider-switch в отдельный файл

--- a/less/components/shop.less
+++ b/less/components/shop.less
@@ -39,8 +39,7 @@
       text-transform: uppercase;
     }
   }
-  .slider__switch{
-      .slider-switch();
+  &__slider-switch{
     padding-top: 40px;
 
   }
