--- a/less/style.less
+++ b/less/style.less
@@ -1,7 +1,6 @@
 @import (less) "../css/normalize.css";
 
 @import "variables.less";
-@import "mixins.less";
 @import "general.less";
 @import "components/main-header";
 @import "components/top-menu.less";
@@ -9,6 +8,7 @@
 @import "components/intro.less";
 @import "components/applications.less";
 @import "components/info.less";
+@import "components/slider-switch";
 
 @import "components/shop.less";
 @import "components/contacts.less";
