--- a/less/components/frm-contest.less
+++ b/less/components/frm-contest.less
@@ -11,6 +11,7 @@
     line-height: 30px;
     font-weight: normal;
     text-align: center;
+    margin-top: 0;
     margin-bottom: 40px;
     span {
       display: none;
@@ -288,8 +289,8 @@
     }
   }
   &-footer{
-    padding-top: 50px;
-    padding-bottom: 64px;
+    padding-top: 52px;
+    padding-bottom: 58px;
     padding-left: 20px;
     padding-right: 20px;
   }
