--- a/less/components/top-menu.less
+++ b/less/components/top-menu.less
@@ -1,16 +1,20 @@
 .top-menu {
   width: 320px;
-  padding: 22px 20px;
+  padding: 20px 20px;
   display: flex;
   justify-content: space-between;
   z-index: 100;
   background: rgba(0, 0, 0, 0.3);
   position: relative;
   &__logo {
-
+    svg {
+      fill: white;
+    }
   }
   &__btn {
-
+    svg{
+      fill: white;
+    }
   }
 }
 
