--- a/less/style.less
+++ b/less/style.less
@@ -2,6 +2,8 @@
 
 @import "variables.less";
 @import "general.less";
+@import "components/copyright";
+@import "components/social-links";
 @import "components/main-header";
 @import "components/top-menu.less";
 @import "components/main-menu.less";
@@ -15,6 +17,6 @@
 
 @import "components/frm-contest.less";
 @import "components/foto-container";
-@import "components/contest-footer";
+@import "components/main-footer";
 
 
