сделал блок контакты с картой

--- a/less/components/main-header.less
+++ b/less/components/main-header.less
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  &__text{
+  &__text {
     background: transparent;
     color: white;
     font-size: 24px;
@@ -14,5 +14,15 @@
     padding: 28px 46px 50px;
     margin: 0;
     text-align: center;
+  }
+  &__intro {
+    background: transparent;
+    color: white;
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: lighter;
+    margin: 0;
+    text-align: center;
+    padding: 15px 46px 30px;
   }
 }
