--- a/less/components/applications.less
+++ b/less/components/applications.less
@@ -1,13 +1,15 @@
 .applications{
-  background-color: darkcyan;
+  background-color: @menu-color;
   padding-top: 28px;
-  padding-bottom: 35px;
+  padding-bottom: 30px;
   &__btn-buy{
     text-decoration: none;
-    display: block;
+    display: inline-block;
+    vertical-align: middle;
+    padding: 15px 45px;
     text-align: center;
     border: 3px solid white;
-    border-radius: 20px;
+    border-radius: 30px;
     font-size: 18px;
     line-height: 18px;
     font-weight: bold;
@@ -17,8 +19,10 @@
   &__icons{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    margin-bottom: 30px;
+    justify-content: space-between;
+    align-items: baseline;
+    padding: 0 55px;
+    margin-bottom: 22px;
   }
   &__text{
     font-size: 14px;
