--- a/less/components/contacts.less
+++ b/less/components/contacts.less
@@ -1,5 +1,6 @@
 .contacts{
-  background-color: #8fb4b1;
+  width: 320px;
+  margin: 0 auto;
   padding-top: 48px;
   &__text{
     color: black;
@@ -8,23 +9,38 @@
     font-weight: lighter;
     padding: 0 45px;
     text-align: center;
-    margin-bottom: 45px;
+    margin-top: 0;
+    margin-bottom: 33px;
   }
-  &__item-header{
+  &__item-header {
     color: black;
     font-size: 18px;
-    line-height: 18px;
+    line-height: 24px;
     font-weight: bold;
     padding: 0 5px;
     text-align: center;
-    margin-bottom: 14px;
+    margin-top: 0;
+    margin-bottom: 5px;
   }
-  &__item{
+  &__item {
     color: @contacts-item-color;
     font-size: 24px;
-    line-height: 24px;
+    line-height: 28px;
     font-weight: lighter;
     padding: 0 15px;
     text-align: center;
+    margin-top: 0;
+    margin-bottom: 23px;
+    &:last-of-type {
+      margin-bottom: 38px;
+    }
+  }
+  &__map {
+    position: relative;
+    img{
+      position: absolute;
+      z-index: 100;
+      width: 320px;
+    }
   }
 }
