--- a/less/components/info.less
+++ b/less/components/info.less
@@ -1,13 +1,20 @@
 .info{
-  padding-top: 46px;
-  background-color: white;
+  width: 320px;
+  margin: 0 auto;
+  padding-top: 40px;
+  background-color: @light-gray-back-color;
   &__item-single{
     color: black;
     font-size: 24px;
-    line-height: 32px;
+    line-height: 30px;
     font-weight: lighter;
+    margin-top: 0;
+    margin-bottom: 25px;
     padding: 0 58px;
     text-align: center;
+    &:last-of-type{
+      margin-bottom: 112px;
+    }
   }
   &__item-header{
     color: black;
@@ -16,6 +23,8 @@
     font-weight: bold;
     padding: 0 5px;
     text-align: center;
+    margin-top:0;
+    margin-bottom: 14px;
   }
   &__item{
     color: black;
@@ -24,5 +33,8 @@
     font-weight: normal;
     padding: 0 20px;
     text-align: center;
+    margin-top: 0;
+    margin-bottom: 28px;
+
   }
 }
