--- a/less/style.less
+++ b/less/style.less
@@ -10,6 +10,8 @@
 @import "components/applications.less";
 @import "components/info.less";
 @import "components/slider-switch";
+@import "components/app-reviews-slider";
+
 
 @import "components/shop.less";
 @import "components/contacts.less";
