--- a/less/variables.less
+++ b/less/variables.less
@@ -8,4 +8,7 @@
 @input-border-color: @rates-border-color;
 @light-gray-back-color: #f2f2f2;
 @green-btn-color: #2aab6d;
+@slider-gray-color: #bec2c7;
+@slider-hover-color: #7e868f;
+@slider-down-color: #e9ebec;
 
