--- a/less/components/slider-switch.less
+++ b/less/components/slider-switch.less
@@ -1,23 +1,26 @@
-.slider-switch{
+.slider-switch {
   text-align: center;
-  i{
+  &__item {
     display: inline-block;
     text-align: center;
     vertical-align: middle;
-    margin: 0 13px;
-    width: 6px;
-    height: 6px;
+    margin-right: 13px;
+    width: 12px;
+    height: 12px;
     border: 3px solid white;
     border-radius: 50%;
-    background-color: #bec2c7;
+    background-color: @slider-gray-color;
+    &:hover {
+      background-color: @slider-hover-color;
+    }
+    &:active {
+      background-color: @slider-down-color;
+    }
+    &--active {
+      background-color: white;
+      border: 3px solid black;
+    }
   }
-  &--active{
-    border: 3px solid #283645;
-  }
-  i:hover{
-    background-color: #bec2c7;
-  }
-  i:active{
-    background-color: #7e868f;
-  }
+
+
 }
