--- a/less/components/top-menu.less
+++ b/less/components/top-menu.less
@@ -12,8 +12,10 @@
     }
   }
   &__btn {
-    svg{
-      fill: white;
+    svg {
+      #path-1_1_ {
+        fill: white;
+      };
     }
   }
 }
