--- a/less/components/applications.less
+++ b/less/components/applications.less
@@ -2,6 +2,7 @@
   background-color: @menu-color;
   padding-top: 28px;
   padding-bottom: 30px;
+  text-align: center;
   &__btn-buy{
     text-decoration: none;
     display: inline-block;
